--- a/Receiver/Receiver.ioc
+++ b/Receiver/Receiver.ioc
@@ -16,51 +16,53 @@ Mcu.IP3=NVIC
 Mcu.IP4=RCC
 Mcu.IP5=SPI2
 Mcu.IP6=SYS
-Mcu.IP7=USART3
-Mcu.IP8=USB_OTG_FS
-Mcu.IPNb=9
+Mcu.IP7=TIM10
+Mcu.IP8=USART3
+Mcu.IP9=USB_OTG_FS
+Mcu.IPNb=10
 Mcu.Name=STM32F429ZITx
 Mcu.Package=LQFP144
 Mcu.Pin0=PC13
 Mcu.Pin1=PC14/OSC32_IN
-Mcu.Pin10=PA1
-Mcu.Pin11=PA2
-Mcu.Pin12=PA7
-Mcu.Pin13=PC4
-Mcu.Pin14=PC5
-Mcu.Pin15=PB0
-Mcu.Pin16=PE14
-Mcu.Pin17=PE15
-Mcu.Pin18=PB10
-Mcu.Pin19=PB11
+Mcu.Pin10=PA7
+Mcu.Pin11=PC4
+Mcu.Pin12=PC5
+Mcu.Pin13=PB0
+Mcu.Pin14=PE12
+Mcu.Pin15=PE14
+Mcu.Pin16=PE15
+Mcu.Pin17=PB10
+Mcu.Pin18=PB11
+Mcu.Pin19=PB13
 Mcu.Pin2=PC15/OSC32_OUT
-Mcu.Pin20=PB13
-Mcu.Pin21=PB14
-Mcu.Pin22=PD8
-Mcu.Pin23=PD9
-Mcu.Pin24=PG6
-Mcu.Pin25=PG7
-Mcu.Pin26=PA8
-Mcu.Pin27=PA9
-Mcu.Pin28=PA10
-Mcu.Pin29=PA11
-Mcu.Pin3=PF0
-Mcu.Pin30=PA12
-Mcu.Pin31=PA13
-Mcu.Pin32=PA14
+Mcu.Pin20=PB14
+Mcu.Pin21=PD8
+Mcu.Pin22=PD9
+Mcu.Pin23=PG6
+Mcu.Pin24=PG7
+Mcu.Pin25=PA8
+Mcu.Pin26=PA9
+Mcu.Pin27=PA10
+Mcu.Pin28=PA11
+Mcu.Pin29=PA12
+Mcu.Pin3=PH0/OSC_IN
+Mcu.Pin30=PA13
+Mcu.Pin31=PA14
+Mcu.Pin32=PD3
 Mcu.Pin33=PG11
 Mcu.Pin34=PG13
 Mcu.Pin35=PB6
 Mcu.Pin36=PB7
 Mcu.Pin37=PB9
 Mcu.Pin38=VP_SYS_VS_Systick
-Mcu.Pin4=PF1
-Mcu.Pin5=PH0/OSC_IN
-Mcu.Pin6=PH1/OSC_OUT
-Mcu.Pin7=PC1
-Mcu.Pin8=PC2
-Mcu.Pin9=PC3
-Mcu.PinsNb=39
+Mcu.Pin39=VP_TIM10_VS_ClockSourceINT
+Mcu.Pin4=PH1/OSC_OUT
+Mcu.Pin5=PC1
+Mcu.Pin6=PC2
+Mcu.Pin7=PC3
+Mcu.Pin8=PA1
+Mcu.Pin9=PA2
+Mcu.PinsNb=40
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F429ZITx
@@ -77,6 +79,7 @@ NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:false
+NVIC.TIM1_UP_TIM10_IRQn=true\:1\:0\:true\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
 PA1.GPIOParameters=GPIO_Label
 PA1.GPIO_Label=RMII_REF_CLK [LAN8742A-CZ-TR_REFCLK0]
@@ -131,12 +134,12 @@ PB0.GPIOParameters=GPIO_Label
 PB0.GPIO_Label=LD1 [Green]
 PB0.Locked=true
 PB0.Signal=GPIO_Output
-PB10.Mode=Full_Duplex_Master
-PB10.Signal=SPI2_SCK
-PB11.GPIOParameters=GPIO_Label
-PB11.GPIO_Label=SPI2_CSN
+PB10.Locked=true
+PB10.Mode=I2C
+PB10.Signal=I2C2_SCL
 PB11.Locked=true
-PB11.Signal=GPIO_Output
+PB11.Mode=I2C
+PB11.Signal=I2C2_SDA
 PB13.GPIOParameters=GPIO_Label
 PB13.GPIO_Label=RMII_TXD1 [LAN8742A-CZ-TR_TXD1]
 PB13.Locked=true
@@ -183,6 +186,9 @@ PC5.GPIO_Label=RMII_RXD1 [LAN8742A-CZ-TR_RXD1]
 PC5.Locked=true
 PC5.Mode=RMII
 PC5.Signal=ETH_RXD1
+PD3.Locked=true
+PD3.Mode=Full_Duplex_Master
+PD3.Signal=SPI2_SCK
 PD8.GPIOParameters=GPIO_Label
 PD8.GPIO_Label=STLK_RX [STM32F103CBT6_PA3]
 PD8.Locked=true
@@ -193,6 +199,10 @@ PD9.GPIO_Label=STLK_TX [STM32F103CBT6_PA2]
 PD9.Locked=true
 PD9.Mode=Asynchronous
 PD9.Signal=USART3_RX
+PE12.GPIOParameters=GPIO_Label
+PE12.GPIO_Label=SPI2_CSN
+PE12.Locked=true
+PE12.Signal=GPIO_Output
 PE14.GPIOParameters=GPIO_Label,GPIO_ModeDefaultEXTI
 PE14.GPIO_Label=NRF_IRQ
 PE14.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
@@ -202,10 +212,6 @@ PE15.GPIOParameters=GPIO_Label
 PE15.GPIO_Label=NRF_CE
 PE15.Locked=true
 PE15.Signal=GPIO_Output
-PF0.Mode=I2C
-PF0.Signal=I2C2_SDA
-PF1.Mode=I2C
-PF1.Signal=I2C2_SCL
 PG11.GPIOParameters=GPIO_Label
 PG11.GPIO_Label=RMII_TX_EN [LAN8742A-CZ-TR_TXEN]
 PG11.Locked=true
@@ -227,9 +233,9 @@ PG7.Signal=GPIO_Input
 PH0/OSC_IN.GPIOParameters=GPIO_Label
 PH0/OSC_IN.GPIO_Label=MCO [STM32F103CBT6_PA8]
 PH0/OSC_IN.Locked=true
-PH0/OSC_IN.Mode=HSE-External-Clock-Source
+PH0/OSC_IN.Mode=HSE-External-Oscillator
 PH0/OSC_IN.Signal=RCC_OSC_IN
-PH1/OSC_OUT.Mode=HSE-External-Clock-Source
+PH1/OSC_OUT.Mode=HSE-External-Oscillator
 PH1/OSC_OUT.Signal=RCC_OSC_OUT
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
@@ -259,7 +265,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_ETH_Init-ETH-false-HAL-true,4-MX_USART3_UART_Init-USART3-false-HAL-true,5-MX_USB_OTG_FS_PCD_Init-USB_OTG_FS-false-HAL-true,6-MX_SPI2_Init-SPI2-false-HAL-true,7-MX_I2C1_Init-I2C1-false-HAL-true,8-MX_I2C2_Init-I2C2-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_ETH_Init-ETH-false-HAL-true,4-MX_USART3_UART_Init-USART3-false-HAL-true,5-MX_USB_OTG_FS_PCD_Init-USB_OTG_FS-false-HAL-true,6-MX_SPI2_Init-SPI2-false-HAL-true,7-MX_I2C1_Init-I2C1-false-HAL-true,8-MX_I2C2_Init-I2C2-false-HAL-true,9-MX_TIM10_Init-TIM10-false-HAL-true
 RCC.48MHZClocksFreq_Value=48000000
 RCC.ADC12outputFreq_Value=72000000
 RCC.ADC34outputFreq_Value=72000000
@@ -269,7 +275,6 @@ RCC.APB1Freq_Value=42000000
 RCC.APB1TimFreq_Value=84000000
 RCC.APB2CLKDivider=RCC_HCLK_DIV2
 RCC.APB2Freq_Value=84000000
-RCC.APB2TimCLKDivider=2
 RCC.APB2TimFreq_Value=168000000
 RCC.CortexFreq_Value=168000000
 RCC.EthernetFreq_Value=168000000
@@ -282,7 +287,7 @@ RCC.I2C1Freq_Value=8000000
 RCC.I2C2Freq_Value=8000000
 RCC.I2C3Freq_Value=8000000
 RCC.I2SClocksFreq_Value=192000000
-RCC.IPParameters=48MHZClocksFreq_Value,ADC12outputFreq_Value,ADC34outputFreq_Value,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimCLKDivider,APB2TimFreq_Value,CortexFreq_Value,EthernetFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2C1Freq_Value,I2C2Freq_Value,I2C3Freq_Value,I2SClocksFreq_Value,LCDTFTFreq_Value,LSI_VALUE,MCO1PinFreq_Value,MCO2PinFreq_Value,MCOFreq_Value,PLLCLKFreq_Value,PLLM,PLLMCOFreq_Value,PLLMUL,PLLN,PLLQ,PLLQCLKFreq_Value,PRESCALERUSB,RTCFreq_Value,RTCHSEDivFreq_Value,SAI_AClocksFreq_Value,SAI_BClocksFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,SYSCLKSourceVirtual,TIM15Freq_Value,TIM16Freq_Value,TIM17Freq_Value,TIM1Freq_Value,TIM20Freq_Value,TIM2Freq_Value,TIM3Freq_Value,TIM8Freq_Value,UART4Freq_Value,UART5Freq_Value,USART1Freq_Value,USART2Freq_Value,USART3Freq_Value,USBFreq_Value,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutput2Freq_Value,VCOOutputFreq_Value,VCOSAIOutputFreq_Value,VCOSAIOutputFreq_ValueQ,VCOSAIOutputFreq_ValueR,VcooutputI2S,VcooutputI2SQ,WatchDogFreq_Value
+RCC.IPParameters=48MHZClocksFreq_Value,ADC12outputFreq_Value,ADC34outputFreq_Value,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,EthernetFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2C1Freq_Value,I2C2Freq_Value,I2C3Freq_Value,I2SClocksFreq_Value,LCDTFTFreq_Value,LSI_VALUE,MCO1PinFreq_Value,MCO2PinFreq_Value,MCOFreq_Value,PLLCLKFreq_Value,PLLM,PLLMCOFreq_Value,PLLMUL,PLLN,PLLQ,PLLQCLKFreq_Value,PRESCALERUSB,RTCFreq_Value,RTCHSEDivFreq_Value,SAI_AClocksFreq_Value,SAI_BClocksFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,SYSCLKSourceVirtual,TIM15Freq_Value,TIM16Freq_Value,TIM17Freq_Value,TIM1Freq_Value,TIM20Freq_Value,TIM2Freq_Value,TIM3Freq_Value,TIM8Freq_Value,UART4Freq_Value,UART5Freq_Value,USART1Freq_Value,USART2Freq_Value,USART3Freq_Value,USBFreq_Value,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutput2Freq_Value,VCOOutputFreq_Value,VCOSAIOutputFreq_Value,VCOSAIOutputFreq_ValueQ,VCOSAIOutputFreq_ValueR,VcooutputI2S,VcooutputI2SQ,WatchDogFreq_Value
 RCC.LCDTFTFreq_Value=24500000
 RCC.LSI_VALUE=32000
 RCC.MCO1PinFreq_Value=16000000
@@ -337,12 +342,18 @@ SPI2.Direction=SPI_DIRECTION_2LINES
 SPI2.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler
 SPI2.Mode=SPI_MODE_MASTER
 SPI2.VirtualType=VM_MASTER
+TIM10.ClockDivision=TIM_CLOCKDIVISION_DIV4
+TIM10.IPParameters=Prescaler,ClockDivision,Period
+TIM10.Period=60000-1
+TIM10.Prescaler=42000-1
 USART3.IPParameters=VirtualMode
 USART3.VirtualMode=VM_ASYNC
 USB_OTG_FS.IPParameters=VirtualMode
 USB_OTG_FS.VirtualMode=Device_Only
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+VP_TIM10_VS_ClockSourceINT.Mode=Enable_Timer
+VP_TIM10_VS_ClockSourceINT.Signal=TIM10_VS_ClockSourceINT
 board=NUCLEO-F429ZI
 boardIOC=true
 isbadioc=false
