--- a/Receiver_v2/Receiver.ioc
+++ b/Receiver_v2/Receiver.ioc
@@ -17,7 +17,8 @@ Mcu.CPN=STM32F401RET6
 Mcu.Family=STM32F4
 Mcu.IP0=DMA
 Mcu.IP1=I2C1
-Mcu.IP10=USART6
+Mcu.IP10=USART2
+Mcu.IP11=USART6
 Mcu.IP2=I2C3
 Mcu.IP3=NVIC
 Mcu.IP4=RCC
@@ -25,8 +26,8 @@ Mcu.IP5=SPI2
 Mcu.IP6=SYS
 Mcu.IP7=TIM3
 Mcu.IP8=TIM10
-Mcu.IP9=USART2
-Mcu.IPNb=11
+Mcu.IP9=TIM11
+Mcu.IPNb=12
 Mcu.Name=STM32F401R(D-E)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13-ANTI_TAMP
@@ -48,6 +49,7 @@ Mcu.Pin22=PB7
 Mcu.Pin23=VP_SYS_VS_Systick
 Mcu.Pin24=VP_TIM3_VS_ClockSourceINT
 Mcu.Pin25=VP_TIM10_VS_ClockSourceINT
+Mcu.Pin26=VP_TIM11_VS_ClockSourceINT
 Mcu.Pin3=PH0 - OSC_IN
 Mcu.Pin4=PH1 - OSC_OUT
 Mcu.Pin5=PC0
@@ -55,7 +57,7 @@ Mcu.Pin6=PC1
 Mcu.Pin7=PC2
 Mcu.Pin8=PC3
 Mcu.Pin9=PA2
-Mcu.PinsNb=26
+Mcu.PinsNb=27
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F401RETx
@@ -64,7 +66,7 @@ MxDb.Version=DB.6.0.60
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
 NVIC.DMA2_Stream1_IRQn=true\:3\:0\:true\:false\:true\:false\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
-NVIC.EXTI15_10_IRQn=true\:2\:0\:true\:false\:true\:true\:true\:true
+NVIC.EXTI15_10_IRQn=true\:0\:0\:true\:false\:true\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
@@ -73,7 +75,8 @@ NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_3
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:true\:false\:true\:true\:true\:false
-NVIC.TIM1_UP_TIM10_IRQn=true\:1\:0\:true\:false\:true\:true\:true\:true
+NVIC.TIM1_TRG_COM_TIM11_IRQn=true\:3\:0\:true\:false\:true\:true\:true\:true
+NVIC.TIM1_UP_TIM10_IRQn=true\:2\:0\:true\:false\:true\:true\:true\:true
 NVIC.USART6_IRQn=true\:3\:0\:true\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
 PA13.GPIOParameters=GPIO_Label
@@ -117,8 +120,9 @@ PB10.GPIOParameters=GPIO_Label
 PB10.GPIO_Label=NRF_SCK
 PB10.Mode=Full_Duplex_Master
 PB10.Signal=SPI2_SCK
-PB15.GPIOParameters=GPIO_Label
+PB15.GPIOParameters=GPIO_Label,GPIO_ModeDefaultEXTI
 PB15.GPIO_Label=NRF_IRQ
+PB15.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
 PB15.Locked=true
 PB15.Signal=GPXTI15
 PB3.GPIOParameters=GPIO_Label
@@ -248,6 +252,10 @@ SPI2.VirtualType=VM_MASTER
 TIM10.IPParameters=Prescaler,Period
 TIM10.Period=60000-1
 TIM10.Prescaler=42000-1
+TIM11.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_DISABLE
+TIM11.IPParameters=Prescaler,Period,AutoReloadPreload
+TIM11.Period=32000-1
+TIM11.Prescaler=42000-1
 TIM3.IPParameters=Prescaler
 TIM3.Prescaler=42000-1
 USART2.IPParameters=VirtualMode
@@ -258,6 +266,8 @@ VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 VP_TIM10_VS_ClockSourceINT.Mode=Enable_Timer
 VP_TIM10_VS_ClockSourceINT.Signal=TIM10_VS_ClockSourceINT
+VP_TIM11_VS_ClockSourceINT.Mode=Enable_Timer
+VP_TIM11_VS_ClockSourceINT.Signal=TIM11_VS_ClockSourceINT
 VP_TIM3_VS_ClockSourceINT.Mode=Internal
 VP_TIM3_VS_ClockSourceINT.Signal=TIM3_VS_ClockSourceINT
 board=NUCLEO-F401RE
